Also increase perm gen.